fix(style): Change the background color to have more contrast.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@
 }
 
 body {
-  background-color: #ccc;
   color: #000;
   font-family: 'Press Start 2P', sans-serif;
   height: 100vh;
